# Besktop

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.agent-skills/: README.md  commit-workflow.md  open-core-boundary.md  project-planning.md  repository-release-model.md  technical-planning.md
docs/: FIGHT_ACTION_CATALOG.md  FIGHT_ACTION_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  MVP_PLUGIN_FRAMEWORK.md  OPEN_CORE_BOUNDARY.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RENDER_PERFORMANCE.md  REPOSITORY_AND_RELEASE_MODEL.md  ROADMAP.md  TECHNICAL_PLAN.md
resources/packs/: icon-fight-basic.bpack
src/: main.cpp
src/besktop/: version.h  version.h.in
src/besktop/animation/: action_clip.cpp  action_clip.h  action_player.cpp  action_player.h  active_encounter_pool.cpp  active_encounter_pool.h  actor_ecosystem.cpp  actor_ecosystem.h  actor_event_reaction.cpp  actor_event_reaction.h  awakening_director.cpp  awakening_director.h  combat_director.cpp  combat_director.h  combat_episode.cpp  combat_episode.h  combat_pair.cpp  combat_pair.h  encounter_arbiter.cpp  encounter_arbiter.h  encounter_director.cpp  encounter_director.h  gait_ik.cpp  gait_ik.h  icon_fight_scene.cpp  icon_fight_scene.h  icon_fight_scene_active_pool.inl  turn_motion.cpp  turn_motion.h
src/besktop/app/: runtime_options.cpp  runtime_options.h  stage_window.cpp  stage_window.h
src/besktop/core/: json_value.cpp  json_value.h  mvp_runtime.cpp  mvp_runtime.h  pack_framework.cpp  pack_framework.h
src/besktop/desktop/: desktop_snapshot.cpp  desktop_snapshot.h
src/besktop/logging/: logger.cpp  logger.h
src/besktop/render/: icon_image_cache.cpp  icon_image_cache.h  taskbar_renderer.cpp  taskbar_renderer.h  wallpaper_renderer.cpp  wallpaper_renderer.h
src/besktop/resources/: besktop_resources.rc.in  besktop_version.rc.in  resource.h
tests/: action_player_tests.cpp  active_encounter_pool_tests.cpp  actor_event_reaction_tests.cpp  awakening_director_tests.cpp  combat_director_tests.cpp  combat_episode_tests.cpp  combat_pair_tests.cpp  ecosystem_decision_tests.cpp  encounter_director_tests.cpp  runtime_options_tests.cpp
tools/: build-release.ps1  mvp_cli.cpp
